# plr-toolbox

./: Cargo.toml  README.md
.sqlx/: query-12023d86c92ff443ad87d6d1d0242b8d398317ce1b78de018f431b2af42aa49a.json  query-3acba41b976a81e9225423850547bbc8b1bd682d73e4b14b10610a3f51d7cd0f.json  query-41158268cdad6e632f28107aff9f91bf7f8dccd6c5e73da2fe4417001f298473.json  query-598071cd3ecf1fdca38424e89227c866e697b4e2813c8a795b0496dc9450a802.json  query-675f1add0517f2cc57ac01f2911e0706827733a07b46f0b48e6db76e8e13bea7.json  query-6ba825fc9a20a38aa2d5783ef827716e2ebc3131896e40ec9036101de0e12725.json  query-92d3c73ececcecfa3aa3df2c3e51b8aab5845b1324e6af6e679f47728b4d8786.json  query-a45e978cba8df3ed0d9b19ed3face9329774f5084976ed9f6a38218417483dac.json  query-a7beef3b75fa2a40c6189c5eea3d446bc632df84018140cc75535e258eee070e.json  query-aa9ee748e4f3347f2fac920ae99e0dccd7e7a3948a3170e646f4993b68ae3e8b.json  query-cfa0bd914f487f02961fd8fde854e37a8da181b65cfd31e326bdcf0dc3f2312d.json  query-fa2e21c76e00b09737641fd5371832fb22d86d4efb3f9574bb37cb36db1813f3.json  query-fc38c2bc39e0b71d46bc193bfcb55e99bf2084b1d0de9b1d25202f66d1b01b80.json  query-fe9a1ff5dcc2918ff884ea8c11607dbf853119422a463c9868e06068d5528d8d.json
libs/kanaeru/: Cargo.toml
libs/kanaeru/src/: cron.rs  error.rs  lib.rs  pool.rs  rabbitmq.rs  redis.rs  sqlx.rs
libs/totp/: Cargo.toml
libs/totp/src/: hotp.rs  lib.rs  totp.rs
migrations/: 202510071835_auth_module.down.sql  202510071835_auth_module.up.sql
modules/auth/: Cargo.toml
modules/auth/src/: lib.rs
modules/auth/src/entities/: mod.rs
modules/auth/src/entities/db/: email_account.rs  email_otp.rs  mod.rs  user_profile.rs
modules/auth/src/entities/redis/: mod.rs  session.rs  user_session_list.rs
modules/auth/src/services/: email_account.rs  mod.rs  session.rs  user_profile.rs
modules/auth/src/utils/: argon2.rs  jwt.rs
proto/auth/: common.proto
