[workspace]
resolver = "3"
members = [
    "libs/kanaeru",
    "libs/totp",
    "modules/auth",
    "modules/plan"
]

[workspace.dependencies]
# Runtime
tokio = { version = "1.45", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
lazy_static = "1.5.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Framework
kanau = { version = "0.3", features = [
    "message",
    "rkyv",
    "bincode",
    "serde_json",
] }
amqprs = { version = "2.1", features = ["uriparse", "urispec"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "time",
    "derive",
    "macros",
    "uuid",
    "rust_decimal",
    "json",
] }
redis = { version = "0.32", features = ["tokio-comp", "uuid", "json"] }
axum = { version = "0.8", features = ["macros", "form"] }
tower = "0.5"

# gRPC
tonic-prost-build = "0.14"
tonic = { version = "0.14", features = ["router", "server"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# Serialization & Deserialization
rkyv = { version = "0.8", features = ["uuid-1", "bytecheck"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.19"
bytes = "1.10"
fast32 = "1.0.3"
bincode = { version = "2.0.1", features = ["serde"] }
urlencoding = "2.1"

# Data types
uuid = { version = "1.10", features = ["serde", "v4", "v7"] }
rust_decimal = { version = "1.37", features = ["rkyv"] }
compact_str = { version = "0.9.0", features = [
    "serde",
    "sqlx-postgres",
    "bytes",
    "smallvec",
] }
time = { version = "0.3", features = ["serde", "serde-human-readable"] }
url = { version = "2.5", features = ["serde"] }
smallvec = { version = "1.14.0", features = [
    "serde",
    "union",
    "const_generics",
    "const_new",
] }

# External tools
reqwest = { version = "0.12", features = ["json"] }
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }

# Auth & Security
rand = "0.9.1"
validator = "0.20.0"
jsonwebtoken = "10.0"
sha2 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
